# llada

./: .gitignore  README.md  config.py  dev_data.py  hello.py  model.py  pretrain.py  pyproject.toml  torch_test.py
data/shakespeare/: prep.py
