[project]
name = "llada"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chex>=0.1.89",
    "datasets[jax]>=3.4.1",
    "datatrove[all]>=0.4.0",
    "flax>=0.10.4",
    "jax[cuda12]>=0.5.2",
    "optax>=0.2.4",
    "transformers>=4.49.0",
]
