[project]
name = "llada"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets[jax]>=3.4.1",
    "datatrove[all]>=0.4.0",
    "equinox>=0.11.12",
    "jax[cuda12]>=0.5.2",
    "optax>=0.2.4",
    "transformers>=4.49.0",
]
